# bwmap

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: chk.rs  chunk_name.rs  lib.rs  mpq.rs  parsed_chk.rs  riff.rs  test.rs  trig.rs  util.rs
src/chk/: chk_colr.rs  chk_crgb.rs  chk_dd2.rs  chk_forc.rs  chk_iown.rs  chk_isom.rs  chk_ive2.rs  chk_iver.rs  chk_mask.rs  chk_mrgn.rs  chk_mtxm.rs  chk_ownr.rs  chk_puni.rs  chk_side.rs  chk_tile.rs  chk_unit.rs  chk_unix.rs  chk_upgs.rs  chk_upgx.rs  chk_uprp.rs  chk_vcod.rs  mod.rs
src/chk2/: ChkColr.rs  ChkCrgb.rs  ChkDd2.rs  ChkDim.rs  ChkEra.rs  ChkForc.rs  ChkIown.rs  ChkIsom.rs  ChkIve2.rs  ChkIver.rs  ChkIver2.rs  ChkMask.rs  ChkMbrf.rs  ChkMrgn.rs  ChkMtxm.rs  ChkOwnr.rs  ChkPtec.rs  ChkPtex.rs  ChkPuni.rs  ChkPupx.rs  ChkSide.rs  ChkSprp.rs  ChkStr.rs  ChkSwnm.rs  ChkTecs.rs  ChkTecx.rs  ChkThg2.rs  ChkTile.rs  ChkTrig.rs  ChkType.rs  ChkUnis.rs  ChkUnit.rs  ChkUnix.rs  ChkUpgr.rs  ChkUpgs.rs  ChkUpgx.rs  ChkUprp.rs  ChkUpus.rs  ChkVcod.rs  ChkVer.rs  (+43 more)
src/chk2/test/: base.rs  bw.rs  bwremaster.rs  general.rs  hybrid.rs  mod.rs  remasterhybrid.rs
src/test/: base.rs  bw.rs  bwremaster.rs  general.rs  hybrid.rs  mod.rs  remasterhybrid.rs  util.rs
test_vectors/: !난공불락2-탐라.scx  (EUD)폭탄피하기[반도체].scx  AchievementPyth.scx  Alphabet Bound.scx  Beatnoob 폭피(너프).scx  Black Bullet Bound 2(p).scx  Black Panther Bound.scx  Black Star Bound.scx  Bound Master 2(p) (1).scx  Bound Master 2(p).scx  Bound Master [4].scx  Bound Master [5].scx  Bound Master 『6』.scx  Brain Bound.scx  CROSS†OVER Bound(P).scx  Can u stop 1 unit (stack) (1).scx  Cat's Bound.scx  Converse Bound 2.scx  CookieJam Bound.scx  CoomBound.scx  Crescent Bound.scx  D u s t BouND P .scx  DJ-Nate Bound(p) (1).scx  DJ-Nate Bound(p).scx  Deemo Bound(p).scx  Demon Bound(p).scx  Demon Bound2(p).scx  Demon_Bound_3(p).scx  Demon_Bound_4[p].scx  EUNOIA Bound.scx  Ecstasy EVF.scx  Electric Bound(p).scx  Final Bound.scx  For Mine Bound(P).scx  Galaxy Music Bound(p).scx  Geometry Dash Bound 2nd(p).scx  Hope Bound[P].scx  HyperXMine Bound.scx  Invincible Bound(p).scx  Kiss Bound -Asahi-(p).scx  (+93 more)
test_vectors/custom_cases/: base.scm  bw.scx  bwremaster.scx  hybrid.scm  remasterhybrid.scm
test_vectors/string_tests/: NoNullTerm.scx  NonTerminated.scx  higherNumStrings.scx  lowNumStrings.scx  lowerNumStrings.scx  noNumStrings.scx  overNumStrings.scx  reverseStackedStrings.scx  sizeBytesRecycling.scx
