[package]
name = "bwmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["full", "uchardet-bindings", "compact_enc_det-bindings"]
full = []

[dependencies]
uchardet-bindings = { git = "ssh://git@github.com/zzlk/uchardet-bindings.git", optional = true }
compact_enc_det-bindings = { git = "ssh://git@github.com/zzlk/compact_enc_det-bindings.git", optional = true }

serde = { version = "*", features = ["derive"] }
encoding_rs = "*"
anyhow = { version = "*", features = ["backtrace"] }

scopeguard = "*"
lazy_static = "*"
phf = { version = "0.10", features = ["macros"] }

tracing = "*"

serde-big-array = "*"

[dev-dependencies]
bwmpq = { git = "https://github.com/zzlk/bwmpq.git" }

reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
walkdir = { version = "*" }
rayon = { version = "*" }
futures = { version = "*" }
rand = { version = "*" }
tempfile = { version = "*" }
sha2 = "*"
