[package]
name = "bwmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["full", "uchardet-bindings", "compact_enc_det-bindings"]
full = []

[dependencies]
uchardet-bindings = { git = "https://github.com/zzlk/uchardet-bindings", optional = true }
compact_enc_det-bindings = { git = "https://github.com/zzlk/compact_enc_det-bindings", optional = true }

serde = { version = "*", features = ["derive"] }
encoding_rs = "*"
anyhow = { version = "*", features = ["backtrace"] }

scopeguard = "*"
lazy_static = "*"
phf = { version = "0.10", features = ["macros"] }

tracing = "*"

serde-big-array = "*"

[dev-dependencies]

reqwest = { version = "*", default-features = false, features = ["json", "http2", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "*" }
rand = { version = "*" }
tempfile = { version = "*" }
sha2 = "*"

async-stream = "*"
